# acin_traj_opt_kinova

./: README.md  collision_test.py  create_env.py
mujocomeshmanager/: MANIFEST.in  README.md  pyproject.toml
mujocomeshmanager/MujocoEnvCreator/: __init__.py  config.py  env_assembly.py  logger.py
mujocomeshmanager/MujocoEnvCreator/environment_parts/: display_single_xml.py
mujocomeshmanager/MujocoEnvCreator/environment_parts/Profactor_gripper/: profactor_gripper.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/Profactor_station/: profactor_station.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/Regal_braun/: regal_braun.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/Regal_weiss_Thies/: regal_weiss_thies.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/Stiwa_box/: stiwa_box.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/TU_table_nice/: TU_table_nice.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/TU_tisch_verstellbar/: tu_tisch_verstellbar.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/UR_gripper/: ur_gripper.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/UR_gripper_modified/: ur_gripper_modified.xml
mujocomeshmanager/MujocoEnvCreator/environment_parts/cage/: cage.xml
mujocomeshmanager/MujocoEnvCreator/utils/: __init__.py  environment_utils.py
mujocomeshmanager/MujocoMeshManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mujocomeshmanager/examples/: generate_env.py  generate_env_move_with_arc.py
mujocomeshmanager/tests/: test_env_assembly.py
(+76 files in other folders)
